- Fixed a corner case in disappearing controls removal.
- Fixed some setFilter corner cases causing screen corruptions.
- Fixed hidden widgets getting reprinted when changed outside the app.

== 0.2 (05.02.2013):
- Added ability to filter out PA internals/Monitors.
- Properly dealing with non-existing/lost connections.
- Fixed m/j/k crash when used on empty page.
- Fixed possible mix-up of SINK and SINK_INPUT controls.
- Fixed hidden controls sometimes not properly removed when gone.
- Added ability to get/set card-wise options (e.g. profiles).

== 0.3 (24.02.2013):
- Fixed crash when trying to go inside on SETTINGS tab.
- Fixed a small screen corruption introduced in 0.2.
- Added ability to get/set control-wise options (e.g. ports).

== 0.4 (17.05.2013):
- Adjusted Makefile to work better on different distros.
- Fixed some possible memory leaks.
- Added a test suite.
- Fixed screen corruptions happening on terminal resizes.
- Fixed settings sometimes disappearing after card profile change.

== 0.4.1 (09.03.2014):
- Fixed INPUTS filtered as OUTPUTS and vice versa.
- Added ability to set SINKs and SOURCEs as default/fallback.
- Fixed segfault on changing single channel volume.

== 0.5 (04.06.2014):
- Fixed showing newly appeared card profile when SETTINGS panel is active.
- Fixed RECORDING threated as PLAYBACK.
- Added ability to set current device for PLAYBACK/RECORDING.
- Deal with options (e.g. ports, profiles) changing dynamically.
- Fixed segfault on gnustep-base < 1.24 [mainly Debian].

== 0.6:
- Moved to ninja for building.
- Better logging mechanism.
- Added ability to configure start view (Fixes #8).
- Reworked configuration.
- Fixed crash when moving up (`h`) through options in settings view.
- Added ability to change volume at a different pace (using J/K shortcuts).
- Added ability to configure volume changing speed (both j/k and J/K).
- Prevented ability to set volume above max value under some circumstances.